--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "namastereact",
   "version": "1.0.0",
   "description": "this is a live course",
-  
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,8 @@
   },
   "homepage": "https://github.com/shreyas-47/Namastereact_lect1#readme",
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.9.3",
     "process": "^0.11.10"
   },
